# xgrammar

./: .clang-format  .pre-commit-config.yaml  .yamlfmt  CMakeLists.txt  pyproject.toml
.github/workflows/: pr_test.yml
benchmark/: README.md  bench_json.py  bench_json_schema.py
cpp/: compiler.cc  fsm.cc  fsm.h  fsm_builder.cc  fsm_builder.h  grammar.cc  grammar_ast.h  grammar_builder.h  grammar_compiler.cc  grammar_data_structure.h  grammar_functor.cc  grammar_functor.h  grammar_matcher.cc  grammar_matcher_base.cc  grammar_matcher_base.h  grammar_matcher_preproc.h  grammar_matcher_state.h  grammar_parser.cc  grammar_parser.h  grammar_serializer.cc  grammar_serializer.h  grammar_state_matcher.cc  json_schema_converter.cc  json_schema_converter.h  persistent_stack.h  pybind.cc  structural_tag.cc
cpp/nanobind/: nanobind.cc
cpp/pybind/: pybind.cc  python_methods.cc
cpp/support/: csr_array.h  dynamic_bitset.h  encoding.cc  encoding.h  graph.cc  graph.h  graph_impl.tcc  logging.h  utils.h
docs/: index.rst
docs/assets/css/: main.css.map
docs/how_to/: engine_integration.rst
examples/benchmark/: bench_apply_token_bitmask_inplace.py
experiment/: per-token-overhead.py  results  test_xml.py  xml_grammar  xml_grammar_printed  xml_grammar_raw.g4
include/xgrammar/: object.h  structural_tag.h  xgrammar.h
python/: requirements.txt  setup.py
python/xgrammar/: __init__.py  bitmask.py  compiler.py  grammar.py  matcher.py  structural_tag.py  testing.py  xgrammar.py
python/xgrammar/kernels/: apply_token_bitmask_inplace_cuda.py  bitmask_to_bool_tensor_torch_compile.py
scripts/: build_xgrammar_wheel_manylinux.sh  run_ctest.sh
tests/cpp/: test_fsm.cc  test_fsm_builder.cc  test_graph.cc  test_json_schema_converter.cc
tests/python/: test_builtin_grammar_json.py  test_custom_grammar.py  test_grammar_matcher.py  test_grammar_matcher_init_context.py  test_grammar_matcher_macro.py  test_grammar_matcher_structural_tag.py  test_grammar_matcher_tag_dispatch.py  test_grammar_parser.py  test_json_schema_converter.py  test_recursion_depth.py  test_token_bitmask_operations.py  test_tokenizer_info.py
